syntax = "proto3";

option go_package = "github.com/natdanai0917/test_repo";

//Structure
message PlayerProfile {
    string id =1;
    string email =2;
    string username=3;
    int32 roleCode = 4;
    string created_at = 5;
    string updateed_at =6;
}

message CredentialSearchReq{
    string email =1;
    string password =2;
}

message FindOnePlayerProfileToRefreshReq {
    string playerId =1;
}

message GetPlayerSavingAccountReq {
    string playerId =1;
}

message GetPlayerSavingAccountRes {
    string playerId =1;
    string balance =2;
}

//Method
service PlayerGrpcService {
    rpc CredentialSearch(CredentialSearchReq) returns (PlayerProfile);
    rpc FindPlayerProfileToRefresh (FindOnePlayerProfileToRefreshReq) returns (PlayerProfile);
    rpc GetPlayerSavingAccount (GetPlayerSavingAccountReq) returns (GetPlayerSavingAccountRes);
}
